[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game/Game.gd" type="Script" id=1]
[ext_resource path="res://Game/Stats.gd" type="Script" id=2]
[ext_resource path="res://Game/Board.gd" type="Script" id=3]
[ext_resource path="res://Fonts/Font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Fonts/Quark Cheese - Personal Use.otf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 20
custom_constants/margin_left = 50
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 50.0
margin_top = 20.0
margin_right = 590.0
margin_bottom = 340.0
custom_constants/separation = 20

[node name="Stats" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 540.0
margin_bottom = 28.0
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="LevelLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/Stats"]
margin_right = 177.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "Level: -"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LivesLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/Stats"]
margin_left = 181.0
margin_right = 358.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "Lives: -"
align = 1

[node name="ScoreLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/Stats"]
margin_left = 362.0
margin_right = 540.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "Score: -"
align = 1

[node name="Board" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 540.0
margin_bottom = 267.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 287.0
margin_right = 540.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 1 )
text = "gain +1 life every 6 levels
lose -1 life if all pairs aren't found"
align = 1
